--- a/jerseys/templates/jerseys/list.html
+++ b/jerseys/templates/jerseys/list.html
@@ -4,6 +4,7 @@
 <body>
     <h1>Homepage</h1>
     <a href="{% url 'home' %}"><button>Home</button></a>
+    <a href="{% url 'cart' %}">View Cart</a>
     <h1>Available Jerseys</h1>
     <div style="display: flex; flex-wrap: wrap;">
         {% for jersey in jerseys %}
@@ -12,11 +13,6 @@
             <h3><a href="{{ jersey.get_absolute_url }}">{{ jersey }}</a></h3>
             <p>Price: ${{ jersey.price }}</p>
             <p>Stock: {{ jersey.stock }}</p>
-            {% if user.is_authenticated %}
-                <a href="{% url 'add_to_cart' jersey.slug %}"><button>Add to Cart</button></a>
-            {% else %}
-                <p><a href="{% url 'login' %}">Login to purchase</a></p>
-            {% endif %}
         </div>
         {% empty %}
         <p>No jerseys available.</p>
