Added base functionalities for Marketplace

--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -32,5 +32,6 @@
     {% endif %}
 
     <a href="{% url 'jersey_list' %}"><button>Browse Jerseys</button></a>
+    <a href="{% url 'marketplace_home' %}"><button>Visit Marketplace</button></a>
 </body>
 </html>
