--- a/templates/base.html
+++ b/templates/base.html
@@ -144,20 +144,22 @@
         <nav>
             <h1><a href="{% url 'home' %}">JerseyHub</a></h1>
             <ul>
+                <li>Welcome, {{ user.username }}</li>
                 <li><a href="{% url 'jersey_list' %}">Jerseys</a></li>
                 {% if user.is_authenticated %}
                 <li><a href="{% url 'marketplace_home' %}">Marketplace</a></li>
                 <li><a href="{% url 'cart' %}">Cart</a></li>
-                    <li>Welcome, {{ user.username }}</li>
+                    <li>
+                        {% if user.is_superuser %}
+                        <a href="{% url 'admin:index' %}"><button style="background:none; border:none; color:#ecf0f1; padding:0; margin:0; cursor:pointer; font-size:inherit; font-family:inherit; text-decoration: none;">Admin Dashboard</button></a>
+                        {% endif %}
+                    </li>
                     <li>
                         <form method="post" action="{% url 'logout' %}" style="display:inline;">
                             {% csrf_token %}
-                            <button type="submit" style="background:none; border:none; color:#ecf0f1; padding:0; margin:0; cursor:pointer; font-size:inherit; font-family:inherit; text-decoration: underline;">Logout</button>
+                            <button type="submit" style="background:none; border:none; color:#ecf0f1; padding:0; margin:0; cursor:pointer; font-size:inherit; font-family:inherit; text-decoration: none;">Logout</button>
                         </form>
                     </li>
-                    {% if user.is_superuser %}
-                        <a href="{% url 'admin:index' %}"><button style="background:none; border:none; color:#ecf0f1; padding:0; margin:0; cursor:pointer; font-size:inherit; font-family:inherit; text-decoration: underline;">Admin Dashboard</button></a>
-                    {% endif %}
                 {% else %}
                     <li><a href="{% url 'login' %}">Login</a></li>
                     <li><a href="{% url 'register' %}">Register</a></li>
