--- a/marketplace/templates/marketplace/home.html
+++ b/marketplace/templates/marketplace/home.html
@@ -3,11 +3,11 @@
 {% block title %}Marketplace{% endblock %}
 
 {% block content %}
-    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+    <div class="marketplace-header">
         <h1>Marketplace</h1>
         <div>
             {% if user.is_authenticated %}
-                <a href="{% url 'user_posts' owner_id=request.user.id %}" class="btn" style="margin-right: 10px;">My Posts</a>
+                <a href="{% url 'user_posts' owner_id=request.user.id %}" class="btn btn-my-posts">My Posts</a>
                 <a href="{% url 'create_post' %}" class="btn btn-success">+ Create Post</a>
             {% else %}
                 <a href="{% url 'login' %}?next={{ request.path }}" class="btn">Login to Post</a>
@@ -21,15 +21,15 @@
             {% if post.image %}
                 <img src="{{ post.image.url }}" alt="{{ post.title }}">
             {% else %}
-                <div style="width: 100%; height: 200px; background: #eee; border-radius: 4px; display: flex; align-items: center; justify-content: center; margin-bottom: 15px;">No Image</div>
+                <div class="no-image-placeholder">No Image</div>
             {% endif %}
             
             <h3>{{ post.title }}</h3>
             <p class="price">${{ post.price }}</p>
-            <p style="font-size: 0.9em; color: #666;">By: {{ post.owner.username }}</p>
+            <p class="post-author">By: {{ post.owner.username }}</p>
             
             <div class="actions">
-                <a href="{% url 'post_detail' post_id=post.id %}" class="btn" style="width: 100%; box-sizing: border-box; text-align: center;">View Details</a>
+                <a href="{% url 'post_detail' post_id=post.id %}" class="btn btn-view-details">View Details</a>
             </div>
         </div>
         {% empty %}
