--- a/marketplace/templates/marketplace/user_posts.html
+++ b/marketplace/templates/marketplace/user_posts.html
@@ -11,14 +11,14 @@
             {% if post.image %}
                 <img src="{{ post.image.url }}" alt="{{ post.title }}">
             {% else %}
-                <div style="width: 100%; height: 200px; background: #eee; border-radius: 4px; display: flex; align-items: center; justify-content: center; margin-bottom: 15px;">No Image</div>
+                <div class="no-image-placeholder">No Image</div>
             {% endif %}
             
             <h3>{{ post.title }}</h3>
             <p class="price">${{ post.price }}</p>
             
             <div class="actions">
-                <a href="{% url 'post_detail' post_id=post.id %}" class="btn" style="width: 100%; box-sizing: border-box; text-align: center;">View Details</a>
+                <a href="{% url 'post_detail' post_id=post.id %}" class="btn btn-view-details">View Details</a>
             </div>
         </div>
         {% empty %}
@@ -26,8 +26,7 @@
         {% endfor %}
     </div>
     
-    <div style="margin-top: 20px;">
+    <div class="create-post-link-container">
         <a href="{% url 'create_post' %}" class="btn btn-success">+ Create New Post</a>
-        <a href="{% url 'marketplace_home' %}" class="btn" style="background-color: #6c757d; margin-left: 10px;">Marketplace Home</a>
     </div>
 {% endblock %}
