Added error in template

--- a/marketplace/templates/marketplace/buy_jersey.html
+++ b/marketplace/templates/marketplace/buy_jersey.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
             <button type="submit" class="btn">Confirm Purchase</button>
+            {{ error }}
         </form>
     </div>
 </div>
